src/objects/Session_Slide__c.object
<CustomObject>
    <description>Junction object to relate many-to-many relationship between Disclosures(Affiliations) and (Event) Sessions</description>
    <fields>
        <fullName>CME_Eligible__c</fullName>
        <formula>IF(Disclosure__r.CME_Eligible__c=True,&apos;&apos;, &apos;Not CME&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CME Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Names__c</fullName>
        <label>Company Name(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Disclosure__r.Contact__r.FirstName &amp;&quot; &quot; &amp;  Disclosure__r.Contact__r.LastName</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure__c</fullName>
        <label>Disclosure</label>
        <referenceTo>Disclosure__c</referenceTo>
        <relationshipName>DisclosureSessionJunctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Moderators__c</fullName>
        <label>Moderator(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Types__c</fullName>
        <label>Relationship Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <formula>Session__r.Session_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <formula>Session__r.Session_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipName>DisclosureSessionJunction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Session Slide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Session_Name__c</columns>
        <columns>Session_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>SS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>